# Medical-imaging-XAI

./: LICENSE  README.md  pyproject.toml
docs/: data_ethics.md  model_card.md
models/: dermamnist_smallcnn.pt  pneumoniamnist_smallcnn.pt  retinamnist_smallcnn.pt
src/med_image_xai/: __init__.py  cli.py  config.py  data.py  evaluate.py  fairness.py  gradcam.py  model.py  pipeline.py  predict.py  train.py  web.py
src/medical_imaging_xai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_fairness.py  test_gradcam.py  test_model.py
