[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-imaging-xai"
version = "0.1.0"
description = "Explainable medical image classifier (pneumonia / diabetic retinopathy / skin lesions) with Grad-CAM and fairness auditing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "medmnist>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "typer>=0.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
med-image-xai = "med_image_xai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
